# Django

./: README.md
Chapter_01/Django_프로젝트_설치_및_시작/mysite/: settings.py  urls.py
Chapter_01/Django_프로젝트_설치_및_시작/templates/: gugu.html  (+2 more)
Chapter_02/: .python-version  db.sqlite3  pyproject.toml
Chapter_02/Chapter_02/: admin.py  apps.py  models.py  views.py
Chapter_02/config/: settings.py  urls.py
Chapter_02/templates/: book_list.html  bookmark_detail.html  bookmark_list.html  movie.html
Chapter_03/blog/: db.sqlite3  pyproject.toml
Chapter_04/: .python-version  pyproject.toml
Chapter_04/blog/: db.sqlite3
Chapter_05/: .python-version  pyproject.toml
Chapter_06/: pyproject.toml
Chapter_06/blog/: db.sqlite3
Chapter_07/: .gitignore
Chapter_07/blog/: .python-version  db.sqlite3  pyproject.toml
Chapter_07/blog/blog/: admin.py  cb_viesw.py  forms.py  models.py  urls.py  views.py
Chapter_07/blog/blog/migrations/: 0002_alter_blog_options_blog_author.py  0004_comment.py  0005_alter_comment_options_blog_image.py  0006_blog_thumbnail_alter_blog_image.py
Chapter_07/blog/config/: settings.py  urls.py
Chapter_07/blog/templates/: about.html  base.html  blog_detail.html  blog_form.html  blog_list.html  pagination.html
Chapter_07/blog/templates/registration/: login.html
pystagram/: .gitignore  db.sqlite3  pyproject.toml
pystagram/config/: settings.py  urls.py
pystagram/member/: admin.py  forms.py  models.py  views.py
pystagram/post/: admin.py  forms.py  models.py  views.py
pystagram/templates/: base.html
pystagram/utils/: email.py  forms.py  models.py
(+49 files in other folders)
